--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -54,6 +54,7 @@ jobs:
       uses: swift-actions/setup-swift@v2
       with:
         swift-version: '5.9'
+        gpg-private-key: ''
         
     - name: Show Swift version
       run: swift --version
@@ -90,6 +91,7 @@ jobs:
       uses: swift-actions/setup-swift@v2
       with:
         swift-version: '5.9'
+        gpg-private-key: ''
         
     - name: Show Swift version
       run: swift --version
@@ -276,6 +278,7 @@ jobs:
       uses: swift-actions/setup-swift@v2
       with:
         swift-version: '5.9'
+        gpg-private-key: ''
         
     - name: Install zlib (Linux)
       if: matrix.platform == 'linux'
