--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,7 +33,7 @@ repos:
     rev: v3.1.0
     hooks:
       - id: prettier
-        types_or: [yaml, yml]
+        types_or: [yaml]
         additional_dependencies: ['prettier@3.1.0']
 
   # Markdown formatting
