Disable sanitiser for ubuntu adding docs an that

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -104,17 +104,17 @@ jobs:
         run: swift build
 
       - name: Run all tests
-        run: swift test --verbose
+        run: swift test --no-sanitize --verbose
 
       - name: Run specific test groups
         run: |
-          swift test --filter CoreTests
-          swift test --filter ExtensionsTests
-          swift test --filter FileOperationsTests
-          swift test --filter PerformanceTests
-          swift test --filter ErrorHandlingTests
-          swift test --filter StreamingTests
-          swift test --filter ConcurrencyTests
+          swift test --filter CoreTests --no-sanitize
+          swift test --filter ExtensionsTests --no-sanitize
+          swift test --filter FileOperationsTests --no-sanitize
+          swift test --filter PerformanceTests --no-sanitize
+          swift test --filter ErrorHandlingTests --no-sanitize
+          swift test --filter StreamingTests --no-sanitize
+          swift test --filter ConcurrencyTests --no-sanitize
 
   # Build and test CLI tool
   test-cli:
@@ -290,7 +290,7 @@ jobs:
         run: swift build -c ${{ matrix.configuration }}
 
       - name: Test package
-        run: swift test -c ${{ matrix.configuration }}
+        run: swift test -c ${{ matrix.configuration }} --no-sanitize
 
       - name: Build CLI tool
         run: swift build -c ${{ matrix.configuration }} --product SwiftZlibCLI
@@ -315,4 +315,4 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y zlib1g-dev
 
       - name: Run MemoryLeakTests
-        run: swift test --filter MemoryLeakTests --verbose
+        run: swift test --filter MemoryLeakTests --no-sanitize --verbose
