--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,6 +7,27 @@ on:
     branches: [main, develop]
 
 jobs:
+  # Reusable Swift installation job
+  install-swift-linux:
+    name: Install Swift (Linux)
+    runs-on: ubuntu-22.04
+    outputs:
+      swift-path: ${{ steps.install-swift.outputs.path }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Swift
+        id: install-swift
+        run: |
+          # Download and install Swift 6.1 manually
+          wget -q https://download.swift.org/swift-6.1-release/ubuntu2204/swift-6.1-RELEASE-ubuntu22.04.tar.gz
+          tar xzf swift-6.1-RELEASE-ubuntu22.04.tar.gz
+          sudo mv swift-6.1-RELEASE-ubuntu22.04 /opt/swift
+          echo "path=/opt/swift/usr/bin" >> $GITHUB_OUTPUT
+          echo "/opt/swift/usr/bin" >> $GITHUB_PATH
+          echo "SWIFT_HOME=/opt/swift" >> $GITHUB_ENV
+
   # Test on macOS with latest Xcode (newest runner)
   test-macos-latest:
     name: macOS (Xcode 15.2)
@@ -51,7 +72,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Swift
-        uses: swift-actions/setup-swift@v2.3.0
+        uses: swift-actions/setup-swift@v2.2.0
         with:
           swift-version: "6.1"
 
@@ -84,15 +105,16 @@ jobs:
   test-linux-latest:
     name: Linux (Ubuntu 22.04, Swift 6.1)
     runs-on: ubuntu-22.04
+    needs: install-swift-linux
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Swift
-        uses: swift-actions/setup-swift@v2.3.0
-        with:
-          swift-version: "6.1"
+      - name: Setup Swift environment
+        run: |
+          echo "${{ needs.install-swift-linux.outputs.swift-path }}" >> $GITHUB_PATH
+          echo "SWIFT_HOME=/opt/swift" >> $GITHUB_ENV
 
       - name: Show Swift version
         run: swift --version
@@ -256,35 +278,51 @@ jobs:
           swift package show-dependencies
           swift package resolve
 
-  # Build verification
-  build-verification:
-    name: Build Verification
+  # Build verification - macOS
+  build-verification-macos:
+    name: Build Verification (macOS)
     strategy:
       matrix:
         configuration: [debug, release]
-        platform: [macos, linux]
-    runs-on: ${{ matrix.platform == 'macos' && 'macos-14' || 'ubuntu-22.04' }}
+    runs-on: macos-14
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup environment (macOS)
-        if: matrix.platform == 'macos'
         run: sudo xcode-select -switch /Applications/Xcode_15.2.app
 
-      - name: Install Swift (Linux)
-        if: matrix.platform == 'linux'
-        uses: swift-actions/setup-swift@v2.3.0
-        with:
-          swift-version: "6.1"
+      - name: Install zlib (macOS)
+        run: brew install zlib
+
+      - name: Build package
+        run: swift build -c ${{ matrix.configuration }}
+
+      - name: Test package
+        run: swift test -c ${{ matrix.configuration }}
+
+      - name: Build CLI tool
+        run: swift build -c ${{ matrix.configuration }} --product SwiftZlibCLI
+
+  # Build verification - Linux
+  build-verification-linux:
+    name: Build Verification (Linux)
+    strategy:
+      matrix:
+        configuration: [debug, release]
+    runs-on: ubuntu-22.04
+    needs: install-swift-linux
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Swift environment (Linux)
+        run: |
+          echo "${{ needs.install-swift-linux.outputs.swift-path }}" >> $GITHUB_PATH
+          echo "SWIFT_HOME=/opt/swift" >> $GITHUB_ENV
 
       - name: Install zlib (Linux)
-        if: matrix.platform == 'linux'
         run: sudo apt-get update && sudo apt-get install -y zlib1g-dev
-
-      - name: Install zlib (macOS)
-        if: matrix.platform == 'macos'
-        run: brew install zlib
 
       - name: Build package
         run: swift build -c ${{ matrix.configuration }}
@@ -298,15 +336,16 @@ jobs:
   memory-leak-linux:
     name: Linux Memory Leak Test (MemoryLeakTests only)
     runs-on: ubuntu-22.04
+    needs: install-swift-linux
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Swift
-        uses: swift-actions/setup-swift@v2.3.0
-        with:
-          swift-version: "6.1"
+      - name: Setup Swift environment
+        run: |
+          echo "${{ needs.install-swift-linux.outputs.swift-path }}" >> $GITHUB_PATH
+          echo "SWIFT_HOME=/opt/swift" >> $GITHUB_ENV
 
       - name: Show Swift version
         run: swift --version
