--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,10 +51,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Swift
-        uses: swift-actions/setup-swift@v2.2.0
+        uses: slashmo/install-swift@v0.1.0
         with:
-          swift-version: "5.10.1"
-          no-check-gpg: true
+          version: "5.10.1"
 
       - name: Show Swift version
         run: swift --version
@@ -88,10 +87,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Swift
-        uses: swift-actions/setup-swift@v2.2.0
+        uses: slashmo/install-swift@v0.1.0
         with:
-          swift-version: "5.10.1"
-          no-check-gpg: true
+          version: "5.10.1"
 
       - name: Show Swift version
         run: swift --version
@@ -293,10 +291,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Swift
-        uses: swift-actions/setup-swift@v2.2.0
+        uses: slashmo/install-swift@v0.1.0
         with:
-          swift-version: "5.10.1"
-          no-check-gpg: true
+          version: "5.10.1"
 
       - name: Install zlib (Linux)
         run: sudo apt-get update && sudo apt-get install -y zlib1g-dev
@@ -319,10 +316,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Swift
-        uses: swift-actions/setup-swift@v2.2.0
+        uses: slashmo/install-swift@v0.1.0
         with:
-          swift-version: "5.10.1"
-          no-check-gpg: true
+          version: "5.10.1"
 
       - name: Show Swift version
         run: swift --version
