--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,9 +51,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Swift
-        uses: slashmo/install-swift@v0.1.0
+        uses: SwiftyLab/setup-swift@v1
         with:
-          version: "5.10.1"
+          swift-version: "5.10.1"
 
       - name: Show Swift version
         run: swift --version
@@ -87,9 +87,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Swift
-        uses: slashmo/install-swift@v0.1.0
+        uses: SwiftyLab/setup-swift@v1
         with:
-          version: "5.10.1"
+          swift-version: "5.10.1"
 
       - name: Show Swift version
         run: swift --version
@@ -291,9 +291,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Swift
-        uses: slashmo/install-swift@v0.1.0
+        uses: SwiftyLab/setup-swift@v1
         with:
-          version: "5.10.1"
+          swift-version: "5.10.1"
 
       - name: Install zlib (Linux)
         run: sudo apt-get update && sudo apt-get install -y zlib1g-dev
@@ -316,9 +316,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Swift
-        uses: slashmo/install-swift@v0.1.0
+        uses: SwiftyLab/setup-swift@v1
         with:
-          version: "5.10.1"
+          swift-version: "5.10.1"
 
       - name: Show Swift version
         run: swift --version
