Move C zlib API tests to Tests/CZLibC, add Makefile, and run in CI
- Move test_zlib_dict.c, test_zlib_dict_checksum.c, test_zlib_example.c, test_zlib_simple.c to Tests/CZLibC/
- Add Makefile to build and run all C tests
- Add GitHub Actions job to build and run these C tests on Ubuntu
- Ensure no binaries are committed, only source and Makefile
- C tests now run automatically in CI for better coverage of zlib C API integration

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -307,6 +307,22 @@ jobs:
       - name: Build CLI tool
         run: swift build -c ${{ matrix.configuration }} --product SwiftZlibCLI
 
+  # C zlib C API tests
+  test-c-zlib:
+    name: C zlib C API tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install build tools and zlib
+        run: sudo apt-get update && sudo apt-get install -y build-essential zlib1g-dev
+
+      - name: Build and run C zlib tests
+        run: |
+          cd Tests/CZLibC
+          make clean all run
+
   memory-leak-linux:
     name: Linux Memory Leak Test (MemoryLeakTests only)
     runs-on: ubuntu-latest
